...
    tableView.register(UINib(nibName: "StockCell", bundle: nil), forCellReuseIdentifier: "stock")
    tableView.register(UINib(nibName: "LoadingCell", bundle: nil), forCellReuseIdentifier: "LoadingCell")
  }
  
  func configureNavigation() {
    navigationController?.navigationBar.prefersLargeTitles = true
    navigationItem.setTitle("Stocks")
    navigationController?.navigationBar.tintColor = .white
  }
  
  func reloadData() {
    DispatchQueue.main.async {
      self.tableView.reloadData()
...
    })
  }
  
  func setupSearchBar() {
    searchController.searchResultsUpdater = self
    searchController.obscuresBackgroundDuringPresentation = false
    searchController.searchBar.placeholder = "Search"
    navigationItem.searchController = searchController
    definesPresentationContext = true
  }
  
  override func numberOfSections(in tableView: UITableView) -> Int {
    return 1
...
